Fix svg cropping issue

--- a/assets/less/components/SVG.less
+++ b/assets/less/components/SVG.less
@@ -17,7 +17,6 @@
 .SVG-icon {
   height: 16px;
   width: 16px;
-  margin-bottom: 2px;
 }
 
 .DownvoteIcon.altered .SVG-fill {
