--- a/assets/less/components/listing.less
+++ b/assets/less/components/listing.less
@@ -85,6 +85,10 @@
       border: solid 1px @gray-lighter;
     }
   }
+
+  .linkbar-single-line {
+    height: 21px;
+  }
 }
 
 .external-image {
@@ -141,6 +145,12 @@
 .vote {
   font-size: 150%;
   position: relative;
+
+  .SVG-icon {
+    width: 20px;
+    height: 20px;
+    padding: 2px;
+  }
 }
 
 .listing-author-flair {
